# Maxisy-betfair_bot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: alerts.py  betfair_client.py  config.py  goalserve.py  logger.py  main.py  market_filter.py  matcher.py  models.py  positions.py  probability.py  risk.py  serve_stats.py  stream.py  ticks.py  trading.py
